--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -88,3 +88,23 @@ input {
     background-color: #333;
     border-radius: 5px;
 }
+
+@media (max-width: 768px) {
+
+    body {
+        font-size: 2rem;
+    }
+
+    h1 {
+        font-size: 36px;
+        letter-spacing: 2px;
+    }
+
+    button {
+        font-size: 1.2rem;
+    }
+
+    .todo {
+        padding: 1.4rem 1.4rem 0 1.4rem;
+    }
+}
