Fixed button scaling issue for mobile.

--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -101,7 +101,12 @@ input {
     }
 
     button {
+        width: 100%;
         font-size: 1.2rem;
+    }
+
+    .button-box {
+        flex-direction: column;
     }
 
     .todo {
